# Maestro

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  WORKFLOW.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
config/: maestro.yaml
config/workspaces/MAE-5/: hello.py
config/workspaces/MAE-6/: fizzbuzz.py
config/workspaces/MAE-7/: countdown.py
dashboard/: index.html
docs/: maestro-architecture.md  skill-evolution-roadmap.md
docs/phases/: 00-overview.md  phase-0-foundation.md  phase-1-orchestration.md  phase-2-enhancements.md  phase-3-production.md
scripts/: install-cursor-cli.sh  run-tui-in-container.sh  start-opensandbox.sh  start-workbench.sh
src/maestro/: __init__.py  __main__.py  cli.py  config.py  service.py
src/maestro/acp/: __init__.py  client.py  permissions.py  protocol.py
src/maestro/agent/: __init__.py  claude_code.py  events.py  headless.py
src/maestro/api/: main.py  run_manager.py
src/maestro/github/: __init__.py  client.py
src/maestro/graph/: graph.py  state.py
src/maestro/learning/: __init__.py  evolution.py  experience_bank.py  flow_distiller.py  flow_recorder.py  recorder.py  skill_analyser.py  skill_mutator.py  skill_store.py
src/maestro/linear/: __init__.py  client.py  models.py
src/maestro/orchestrator/: __init__.py  ci_watcher.py  concurrency.py  retry.py  (+3 more)
tests/: test_acp.py  test_claude_code.py  test_cli.py  test_config.py  test_learning.py  test_linear_client.py  test_rtk_snapshot.py  test_tui_rtk.py  test_worker_rtk.py  test_workflow_template.py  test_workspace.py
(+19 files in other folders)
